# mallm

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  base.txt  codecov.yml  config.py  environment.yml  example_discussion.yaml  pyproject.toml  requirements.txt  run.py  setup.py  slurm_llama_discourse.sh  slurm_llama_exp1.sh  update_readme.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  python-package.yml  update_readme.yml
data/: data_download.py
data/data_downloaders/: BBQGenderIdentity.py  BTVote.py  ETHICS.py  ETPC.py  Europarl.py  GPQA.py  GSM8K.py  MMLU.py  MMLUPro.py  MUSR.py  MathLvl5.py  MoCaMoral.py  MoralExceptQA.py  Multi-News.py  MultiNews.py  SQuAD2.py  SimpleEthicalQuestions.py  StrategyQA.py  WMT19_de_en.py  XSum.py
data/datasets/: etpc_debugging.json
evaluation/: evaluation.py
evaluation/metrics/: bertscore.py  bleu.py  meteor.py  metric.py  rouge.py
experiments/: exp_1.py
experiments/data/: data_download.py  etpc.json  europarl.json  get_data.py  gsm8k.json  simple_ethical_questions.json  squad_v2.json  strategyqa.json  test_experiment.json  xsum.json
experiments/data/data_downloaders/: ETPC.py  EUCouncilVotes.py  Europarl.py  GPQA.py  GSM8K.py  GSM8KDownloader.py  SQuAD2.py  SimpleEthicalQuestions.py  StrategyQA.py  XSum.py
experiments/data/xsum.hf/: dataset_dict.json
experiments/memory_bucket/: 1.xml  agent_1.json  agent_2.bak  agent_2.dir  agent_3.bak  agent_3.dir  agent_3.json  global.bak  global.dir  global.json
experiments/tasks/: etpc.py
framework/: run.py
framework/agents/: agent.py  moderator.py  panelist.py
framework/decision_making/: consensus.py
framework/discourse_policy/: coordinator.py
framework/prompts/: agent_prompts.py  coordinator_prompts.py
mallm/: __init__.py  config.py  coordinator.py  run.py  run_async.py  scheduler.py
mallm/agents/: agent.py  draftProposer.py  judge.py  moderator.py  panelist.py
mallm/decision_making/: DecisionProtocol.py  MajorityConsensus.py  Voting.py  approval.py  consensus.py  cumulative.py  decision_protocol.py  majority.py  ranked.py  voting.py
mallm/decision_protocol/: approval.py  approval_voting.py  consensus.py  consensus_voting.py  cumulative.py  cumulative_voting.py  majority.py  protocol.py  ranked.py  ranked_voting.py  simple_voting.py  summary.py  voting.py
mallm/decision_protocols/: judge.py  summary.py
mallm/discourse_policy/: DiscourceDebate.py  DiscourceMemory.py  DiscourceRelay.py  DiscourceReport.py  DiscoursePolicy.py  collective_refinement.py  coordinator.py  debate.py  inspiration.py  memory.py  policy.py  relay.py  report.py
mallm/discussion_paradigms/: debate.py
mallm/evaluation/: evaluator.py
mallm/evaluation/metrics/: bertscore.py  bleu.py  distinct.py  meteor.py  metric.py  qa.py  rouge.py
mallm/evaluation/plotting/: plots.py
mallm/models/: Chat.py  HFTGIChat.py
mallm/models/discussion/: CriticalResponseGenerator.py  CriticalResponseGenerator2.py  FreeTextResponseGenerator.py  JSONResponseGenerator.py  ReasoningResponseGenerator.py  ResponseGenerator.py  SimpleResponseGenerator.py  (+1 more)
mallm/prompts/: agent_prompts.py  coordinator_prompts.py
mallm/scripts/: batch_mallm.py
mallm/utils/: CustomFormatter.py  config.py  dicts.py  functions.py  prompt_templates.py  prompts.py  task_instructions.py  types.py  utils.py
models/llama/: generation.py
notebooks/: EuCouncilDataset.ipynb  async_mallm.py  batch.json  batch.json.template  batch_mallm.py  btvote.ipynb  eval_qa.py  langChainTest.ipynb  plot_qa.py  plots.py  run_locally.py  thread_mallm.py
test/: test_agents.py  test_coordinator.py  test_example.py
test/agents/: test_agents.py
test/decision_protocol/: test_majority_consensus.py
(+40 files in other folders)
