[tool.poetry]
name = "mallm"
version = "0.1.0"
description = ""
authors = ["GippLab <projects@gipplab.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain-core = "^0.1.42"
langchain = "^0.1.16"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
transformers = "^4.39.3"
accelerate = "^0.29.2"
bitsandbytes = "^0.43.1"
fire = "^0.6.0"
tqdm = "^4.66.2"
datasets = "^2.18.0"
colorama = "^0.4.6"
cffi = "^1.16.0"

[tool.poetry.group.dev.dependencies]
fire = "^0.6.0"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
