[project]
name = "mallm"
version = "0.1.0"
authors = [
  { name="GippLab", email="projects@gipplab.org" },
]
description = "Multi-Agent Large Language Models for Collaborative Task-Solving."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Multi-Agent-LLMs/mallm"
Issues = "https://github.com/Multi-Agent-LLMs/mallm/issues"

[tool.poetry]
name = "mallm"
version = "0.1.0"
description = ""
authors = ["GippLab <projects@gipplab.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain-core = "^0.1.42"
langchain = "^0.1.16"
fire = "^0.6.0"
tqdm = "^4.66.2"
datasets = "^2.18.0"
colorama = "^0.4.6"
cffi = "^1.16.0"
openai = "^1.25.0"
huggingface-hub = "0.23.0"
requests = "^2.32.2"

[tool.poetry.group.dev.dependencies]
fire = "^0.6.0"
tqdm = "^4.66.2"
pytest = "^8.2.0"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240521"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["mallm/"]
python_version = "3.9"
warn_unused_configs = true

strict = true
ignore_missing_imports = true
warn_unreachable = true

show_error_context = true
show_error_codes = true
pretty = true
